.xmonad/xmonad.errors

lib/Colors/DoomOne.hs:3:1: error:
    Could not find module `XMonad'
    Perhaps you meant DsMonad (needs flag -package-key ghc-8.10.7)
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
  |
3 | import XMonad
  | ^^^^^^^^^^^^^
